// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test dlt view did not win 1`] = `
"┌──────┬──────────┬──────┐
│ 期号 │ 中奖号码 │ 奖金 │
├──────┴──────────┴──────┤
│    很遗憾！没有中奖    │
└────────────────────────┘
"
`;

exports[`Test dlt view multiple data 1`] = `
"┌───────┬────────────────────────┬─────────┐
│ 期号  │ 中奖号码               │ 奖金    │
├───────┼────────────────────────┼─────────┤
│ 22011 │ [31m01[39m [31m02[39m [31m03[39m [31m04[39m [31m05[39m - [34m01[39m [34m02[39m │ ¥200.00 │
├───────┼────────────────────────┼─────────┤
│ 22010 │ [31m01[39m [31m02[39m 09 10 12 - 03 06 │ ¥10.00  │
├───────┴────────────────────────┴─────────┤
│        恭喜你！奖金总计：[33m¥210.00[39m         │
└──────────────────────────────────────────┘
"
`;

exports[`Test dlt view simple data 1`] = `
"┌───────┬────────────────────────┬─────────┐
│ 期号  │ 中奖号码               │ 奖金    │
├───────┼────────────────────────┼─────────┤
│ 22011 │ [31m01[39m [31m02[39m [31m03[39m [31m04[39m [31m05[39m - [34m01[39m [34m02[39m │ ¥200.00 │
├───────┴────────────────────────┴─────────┤
│        恭喜你！奖金总计：[33m¥200.00[39m         │
└──────────────────────────────────────────┘
"
`;

exports[`Test dlt view use lowest config 1`] = `
"┌───────┬────────────────────────┬─────────┐
│ 期号  │ 中奖号码               │ 奖金    │
├───────┼────────────────────────┼─────────┤
│ 22011 │ [31m01[39m [31m02[39m [31m03[39m [31m04[39m [31m05[39m - [34m01[39m [34m02[39m │ ¥200.00 │
├───────┴────────────────────────┴─────────┤
│        恭喜你！奖金总计：[33m¥200.00[39m         │
└──────────────────────────────────────────┘
"
`;
